Changes made from the "0.3" release to the "0.4" release:
-----------------------------------------------------------

- The z coordinate of bounding boxes is now also used to determine if a Bezier
  curve lies outside the viewport
- Calculations now use GLfloat instead of GLdouble
- Removed the useless third coordinate of the vertex array used for GLC_LINE
  and GLC_TRIANGLE styles
- Fixed a bug where the advance of a glyph that is skipped because it lies
  outside the viewport were not taken into account
- Unified the behaviour of the rendering and measuring routines so that the
  later now take into account the state of GLC_HINTING_QSO.
- Removed the file 'constant.h'
- Added the enumerant GLC_HINTING_QSO to the glEnable()/glDisable() functions
  to allow the user to activate hinting when glyphs are rendered at small pixel
  sizes. By default, hinting is disabled because it creates visual artifacts
  when the glyphs are animated.
- In order to accelerate the rendering of characters, glyphs which bounding box
  lies outside the viewport are now skipped.
- In GLC_TEXTURE mode, no mipmap is built anymore if the glyph is rendered in
  immediate mode (that is if GLC_GL_OBJECTS is disabled and the user is not
  building a display list).
- Fixed a bug in glcRenderChar() where the texture used in GLC_TEXTURE mode was
  deleted after the glyph was rendered if GLC_GL_OBJECTS was disabled. This
  could lead to unexpected results if the user tried to encapsulate the
  glcRenderChar() call in a glcNewList/glcEndList pair.
- In order to accelerate the rendering of glyphs in GLC_LINE and GLC_TRIANGLE
  modes, outline curves that lie outside the viewport are replaced by a
  piecewise linear curve that joins the control points.
- The criterion that is used by the de Casteljau algorithm is now computed in
  pixel distance rather than in object space distance whenever no display list
  is building. This leads to a more optimal number of vertices which depends on